2005-12-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Some minor bug and logging fixes
        
        * bin/event_test.pl: A test server to emit test messages for the
          event_broker.pl to handle as an incoming event feed.
          
2005-12-26 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl & eSTAR/Broker/Running.pm: Functioning event
          broker, between thread garbage collection should now work.
          
        * bin/event_client.pl: Simple client which doesn't use too much of
          the eSTAR infrastructure.
            
2005-12-23 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Added server thread to the event broker.
	
2005-12-21 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/Config.pm: Generalised get_nodes() and get_useragents()
	  to get_block(), left stub routines in for backwards compatibility.
	  
	* bin/event_broker.pl: Started the big job of moving all the
	  functionality of bin/raptor_alert.pl into a generalised event
	  broker. The broker will have a number of client connections, the
	  RAPTOR connection being only one of many, consolidate the feeds
	  and rebroadcast to connected clients.
	
	* etc/event_broker.pl: Added startup script for the event broker.
	  
	* bin/raptor_alert.pl & bin/raptor_gateway.pl: Moved the IAMALIVE
	  functionality back to raptor_gateway.pl as this is ther correct
	  place for it to be, we're testing my connection to RAPTOR to send
	  events rather than the other way round.
	    
2005-12-19 Alasdair Allan <aa@astro.ex.ac.uk>

        * Updated RAPTOR infrastructre to handle the new Astro::VO::VOEvent
          class and other changes to the lower level classes for events.
          
        * bin/raptor_alert.pl: Added IAMALIVE functionality. This initially
          was in bin/raptor_gateway.pl but this was the wrong place to put it
          as the gateway program is a HTN RTML interface. So now all the HTN